--- a/ui/package.json
+++ b/ui/package.json
@@ -2,15 +2,20 @@
   "name": "ui",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5"
-  },
   "scripts": {
     "start": "react-scripts start",
+    "serve:mock": "node tools/mockApi/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-scripts": "1.1.5",
+    "segmented-control-react": "^2.1.3"
+  },
+  "devDependencies": {
+    "express": "^4.16.3"
   }
 }
