--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
     "normalize.css": "^8.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-ratings-declarative": "^3.4.1",
     "react-scripts": "1.1.5",
     "segmented-control-react": "^2.1.3"
   },
