--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "normalize.css": "^8.0.0",
     "react": "^16.4.2",
+    "react-countdown-now": "^1.3.0",
     "react-dom": "^16.4.2",
     "react-ratings-declarative": "^3.4.1",
     "react-scripts": "1.1.5",
